Bug 511743 - crash plasmashell
Summary: crash plasmashell
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.5.1
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-07 02:14 UTC by Cherkah
Modified: 2025-11-11 08:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments
crash_backtrace (145.82 KB, text/plain)
2025-11-07 02:14 UTC, Cherkah
Details
plasmashell-backtrace-2 (106.82 KB, text/plain)
2025-11-07 19:30 UTC, Cherkah
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cherkah 2025-11-07 02:14:05 UTC
Created attachment 186569 [details]
crash_backtrace

SUMMARY
the crash happens  i don't know how && why !
if you need more info let me know


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.7-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-11-07 12:12:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5979
Comment 2 Cherkah 2025-11-07 19:30:44 UTC
Created attachment 186594 [details]
plasmashell-backtrace-2
Comment 3 Cherkah 2025-11-07 19:33:00 UTC
i've another plasmashell crash to report. see the  plasmashell-backtrace-2  attachment
Comment 4 David Redondo 2025-11-11 08:12:58 UTC
Git commit 7cf3237b2c9a6f33ada76fab049fd2c6bcb017dd by David Redondo.
Committed on 11/11/2025 at 08:12.
Pushed by davidre into branch 'master'.

shell/panelview: Dont try to position non-existent config view
FIXED-IN:6.4.6

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7cf3237b2c9a6f33ada76fab049fd2c6bcb017dd
Comment 5 David Redondo 2025-11-11 08:14:17 UTC
Git commit a6dd1c4c6427a4f687a595fdbde9db021b0d5173 by David Redondo.
Committed on 11/11/2025 at 08:13.
Pushed by davidre into branch 'Plasma/6.4'.

shell/panelview: Dont try to position non-existent config view
FIXED-IN:6.4.6


(cherry picked from commit 7cf3237b2c9a6f33ada76fab049fd2c6bcb017dd)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 062b3e1ce188cfce6062fc31e54db9e378bddbdd)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/a6dd1c4c6427a4f687a595fdbde9db021b0d5173
Comment 6 David Redondo 2025-11-11 08:21:23 UTC
Git commit 062b3e1ce188cfce6062fc31e54db9e378bddbdd by David Redondo.
Committed on 11/11/2025 at 08:13.
Pushed by davidre into branch 'Plasma/6.5'.

shell/panelview: Dont try to position non-existent config view
FIXED-IN:6.4.6


(cherry picked from commit 7cf3237b2c9a6f33ada76fab049fd2c6bcb017dd)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/062b3e1ce188cfce6062fc31e54db9e378bddbdd