shell/panelview: Dont try to position non-existent config view

BUG:511743
FIXED-IN:6.4.6


(cherry picked from commit 7cf3237b2c9a6f33ada76fab049fd2c6bcb017dd)

Co-authored-by: David Redondo <kde@david-redondo.de>